Bug fixed: Random vertical spacing all throughout in explorer

--- a/assets/css/scss/explorer.scss
+++ b/assets/css/scss/explorer.scss
@@ -133,6 +133,10 @@ li:hover {
   text-wrap: nowrap;
 }
 
+.note-item-buttons:empty {
+  display: none !important;
+}
+
 .note-item-buttons .fa {
   cursor: pointer;
 }
